zoolorettoalpha.css
/* ... */
[zoo-tile="K"]
{
    background-position: 0% 40%;
}
[zoo-tile="KF"]
{
    background-position: 20% 40%;
}
[zoo-tile="KM"]
{
    background-position: 40% 40%;
}
[zoo-tile="KK"]
{
    background-position: 60% 40%;
}
[zoo-tile="L"]
{
    background-position: 80% 40%;
}
[zoo-tile="LF"]
{
    background-position: 100% 40%;
}
[zoo-tile="LM"]
{
    background-position: 0% 60%;
}
[zoo-tile="LK"]
{
    background-position: 20% 60%;
}
[zoo-tile="M"]
{
    background-position: 40% 60%;
}
[zoo-tile="MF"]
{
    background-position: 60% 60%;
}
[zoo-tile="MM"]
{
    background-position: 80% 60%;
}
[zoo-tile="MK"]
{
    background-position: 100% 60%;
}
[zoo-tile="P"]
{
    background-position: 0% 80%;
}
[zoo-tile="PF"]
{
    background-position: 20% 80%;
}
[zoo-tile="PM"]
{
    background-position: 40% 80%;
}
[zoo-tile="PK"]
{
    background-position: 60% 80%;
}
[zoo-tile="Z"]
{
    background-position: 80% 80%;
}
[zoo-tile="ZF"]
{
    background-position: 100% 80%;
}
[zoo-tile="ZM"]
{
    background-position: 0% 100%;
}
[zoo-tile="ZK"]
{
    background-position: 20% 100%;
}
[zoo-tile="StallA"]
{
    background-position: 40% 100%;
}
[zoo-tile="StallB"]
{
    background-position: 60% 100%;
}
[zoo-tile="StallC"]
{
    background-position: 80% 100%;
}
[zoo-tile="StallD"]
{
    background-position: 100% 100%;
}

[zoo-tile="Coin"]
{
    background: url('img/Coin.png') center / contain no-repeat;
}

.playeraidIT
{
    background-image: url('img/SummaryIT.png');
}
.playeraidEN
{
    background-image: url('img/SummaryEN.png');
}
.playeraidFR
{
    background-image: url('img/SummaryFR.png');
}
.playeraidDE
{
    background-image: url('img/SummaryDE.png');
}

.zoo-barn,.zoo-barn-2p {
    /* FIXME: these depend on tile size! */
    top: 82%;
    height: 15%;
    position: absolute;

    /*
    background-color: red;
    opacity: 0.4;
    */
}

/* FIXME: these MAY depend on tile size! */
.zoo-barn {
    left: 20%;
    width: 40%;
}

.zoo-barn-2p {
    left: 34.383661599999996%;
    width: 32.80816922%;
}


.zoo-cell {
    /* Note these are relative to the image size of the boards. */
    height: calc(var(--zoo-tile-size)) /* 9% */;
    width: auto;
    aspect-ratio: 1.0 !important;
    position: absolute;
}


#zoo-game.zoo-debug .zoo-cell { opacity: 0.5; }
#zoo-game.zoo-debug [zoo-enclosure="1"] .zoo-cell {  background-color: orange; }
#zoo-game.zoo-debug [zoo-enclosure="2"] .zoo-cell {  background-color: blue; }
#zoo-game.zoo-debug [zoo-enclosure="3"] .zoo-cell {  background-color: yellow; }
#zoo-game.zoo-debug [zoo-enclosure="4"] .zoo-cell {  background-color: purple; }
#zoo-game.zoo-debug [zoo-enclosure="5"] .zoo-cell {  background-color: red; }


#zoo-game .zoo-board [zoo-enclosure="0"] {
    position: absolute;
    height: 50%;
    top: 50%;

    display : grid;
    column-gap: calc(var(--zoo-highlight-width) * 4);
    row-gap: calc(var(--zoo-highlight-width) * 4);
    grid-template-columns: 1fr 1fr 1fr;

    /* these differ for 2p boards */
    width: 35%;
    margin: 0.5vw;
    left: 23.5%;
}

#zoo-game.zoo-2p .zoo-board [zoo-enclosure="0"] {
    margin: 0.4vw;
    width: 28%;
    left: 38%;
}

[zoo-enclosure="0"] .zoo-cell {
    position: static;
}

[zoo-extension] {
    position: absolute;
    top: 42.5%;
    height: 18.5%;
    width: 19%;
}

#zoo-game.zoo-2p [zoo-extension] {
    width: 15%;
}

#zoo-game [zoo-extension="1"] { left: 1%; }

#zoo-game.zoo-2p [zoo-extension="1"] { left: 19.25%; }
#zoo-game.zoo-2p [zoo-extension="2"] { left: 1.5%; }

/* FIXME: these depend on tile size! */
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(1) { left: 52.182093391%; top: 10.3%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(2) { left: 41.355397555%; top: 23.5%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(3) { left: 52.182093391%; top: 21.2%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(4) { left: 39.30488698%; top: 34%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(5) { left: 49.96754197%; top: 32%; }
/* stall */
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='1'] .zoo-cell:nth-child(6) { left: 38.074580635%; top: 7.5%; }

#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(1) { left: 70.636688566%; top: 7.3%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(2) { left: 72.523158295%; top: 18%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(3) { left: 68.83223926%; top: 28.5%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(4) { left: 77.85448579%; top: 34.5%; }
/* stalls */
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(5) { left: 86.548650628%; top: 7.5%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='2'] .zoo-cell:nth-child(6) { left: 86.548650628%; top: 18%; }

#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(1) { left: 72.11305618%; top: 51.6%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(2) { left: 84.662180899%; top: 54.8%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(3) { left: 74.409628024%; top: 62%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(4) { left: 83.103792862%; top: 65.6%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(5) { left: 72.11305618%; top: 72.6%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(6) { left: 73.097301256%; top: 83.6%; }
/* stall */
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='3'] .zoo-cell:nth-child(7) { left: 86.548650628%; top: 83.5%; }

#zoo-game.zoo-2p .zoo-board [zoo-enclosure='4'] .zoo-cell:nth-child(1) { left: 23.967067879%; top: 23.5%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='4'] .zoo-cell:nth-child(2) { left: 25.36141507%; top: 34.2%; }
#zoo-game.zoo-2p .zoo-board [zoo-enclosure='4'] .zoo-cell:nth-child(3) { left: 23.967067879%; top: 44.5%; }
/* ... */

